--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Tujitume Youth & Women CBO | Empowering Youth and Women in Nandi County" />
     <meta property="og:description" content="Empowering youth and women in Nandi County through comprehensive skills development, leadership training, and community engagement programs." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@TujitumeYouth" />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
 
   <body>
