✨ Major UI/UX Enhancement: Modern Hero & ValueProposition Redesign
🎨 Hero Section Redesign:
- Implemented modern glassmorphism design with backdrop blur effects
- Added advanced parallax scrolling with mouse-responsive elements
- Enhanced typography with elegant scaling (text-4xl to text-8xl)
- Created organic floating particles with natural motion patterns
- Added morphing background elements with varied timing
- Integrated professional partnership badges and trust indicators

🌟 ValueProposition Section Enhancement:
- Redesigned approach cards with sophisticated hover animations
- Added staggered entrance animations with intersection observer
- Implemented transformation process visualization with progress tracking
- Enhanced card interactions with tilt and magnetic hover effects
- Added natural background elements with responsive motion

🎭 Animation System Overhaul:
- Replaced mechanical loops with organic, physics-inspired motion
- Added 15+ new animation classes (organic-float, subtle-drift, breathe, etc.)
- Implemented mathematical timing variations to eliminate repetitive feel
- Enhanced shimmer effects with individual timing for each element
- Created natural stats counter with dynamic interval variation (3.5-6.5s)
- Added advanced cubic-bezier easing curves for smooth transitions

🏛️ Team Section Modern Redesign:
- Implemented tabbed interface (Leadership, Departments, Board)
- Added interactive team profiles with enhanced visual hierarchy
- Created modern card layouts with glassmorphism effects
- Enhanced gender diversity representation with professional badges
- Streamlined organizational structure presentation

🔧 Technical Improvements:
- Removed Lovable branding and replaced with Tujitume favicon (SVG)
- Updated package name and version to reflect organization branding
- Enhanced CSS with 50+ new animation keyframes and classes
- Optimized performance with GPU acceleration (transform3d)
- Improved responsive design with elegant scaling across devices

🎯 

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@TujitumeYouth" />
     <meta name="twitter:image" content="/og-image.png" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.svg" />
   </head>
 
   <body>
